<resources>
    <string name="app_name">Login Test</string>
    <string name="validate">Validate Fields</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
