<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/full_name"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email_address"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/phone_number"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/cpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/validateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:padding="16dp"
        android:text="@string/validate"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp" />
</LinearLayout>